@@ -9,6 +9,8 @@ git-annex (4.20130710) UNRELEASED; urgency=low
   * uninit: Preserve .git/annex/objects at the end, if it still
     has content, so that old versions of files and deleted files
     are not deleted. Print a message with some suggested actions.
+  * When a transfer is already being run by another process,
+    proceed on to the next file, rather than dying.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 09 Jul 2013 19:17:13 -0400
 
